# internal-wallet-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml  seed.sql
.cursor/: project.mdc
app/: __init__.py  config.py  database.py  main.py  seed.py
app/api/routes/: __init__.py  wallet.py
app/models/: __init__.py  account.py  asset_type.py  ledger.py
app/repositories/: __init__.py  account.py  ledger.py
app/schemas/: __init__.py  wallet.py
app/services/: __init__.py  wallet.py
docs/: ARCHITECTURE.md  INTERVIEW_QA.md
scripts/: seed.py
